--- a/paymentchainparent/businessdomain/pom.xml
+++ b/paymentchainparent/businessdomain/pom.xml
@@ -15,6 +15,7 @@
     
     <modules>
         <module>customer</module>
+        <module>product</module>
     </modules>
     
     
@@ -97,16 +98,16 @@
             <version>${org.mockito.version}</version>
             <scope>test</scope>
         </dependency>   
-     <dependency>
-    <groupId>com.github.javafaker</groupId>
-    <artifactId>javafaker</artifactId>
-    <version>1.0.2</version>
-    <exclusions>
-        <exclusion>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-        </exclusion>
-    </exclusions>
-</dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.yaml</groupId>
+                    <artifactId>snakeyaml</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>     
 </project>
