--- a/paymentchainparent/infraestructuradomain/pom.xml
+++ b/paymentchainparent/infraestructuradomain/pom.xml
@@ -31,4 +31,8 @@
         </dependencies>
     </dependencyManagement>
     
+    <modules>
+        <module>configserver</module>
+    </modules>
+
 </project>
