--- a/paymentchainparent/businessdomain/transaction/src/main/resources/application.properties
+++ b/paymentchainparent/businessdomain/transaction/src/main/resources/application.properties
@@ -4,3 +4,5 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Disabling the swagger-ui
 springdoc.swagger-ui.enabled=true
 server.port=8082
+
+spring.cloud.config.enabled=false
