--- a/paymentchainparent/businessdomain/customer/src/main/resources/application.properties
+++ b/paymentchainparent/businessdomain/customer/src/main/resources/application.properties
@@ -12,3 +12,4 @@ eureka.client.fetch-registry=true
 spring.cloud.config.enabled=true
 
 management.endpoints.web.exposure.include=*
+server.servlet.context-path=/business/V1
