--- a/billing/src/main/resources/application.properties
+++ b/billing/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-server.port=8081
-spring.boot.admin.client.url=http://localhost:8062
-management.endpoints.web.exposure.include=*
+server.port=7080
+#spring.boot.admin.client.url=http://localhost:8062
+#management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
+springdoc.packagesToScan= com.paymentchain.billing.entities, com.paymentchain.billing.controller 
+springdoc.pathToMatch= /billing/**
