--- a/billing/src/main/resources/application.properties
+++ b/billing/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 server.port=7080
-#spring.boot.admin.client.url=http://localhost:8062
-#management.endpoints.web.exposure.include=*
-management.info.env.enabled=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost::5432/billingapp_db
+#spring.datasource.username=postgres
+#spring.datasource.password=qwerty
 
-springdoc.packagesToScan= com.paymentchain.billing.entities, com.paymentchain.billing.controller 
-springdoc.pathToMatch= /billing/**
+# Disabling the /v3/api-docs endpoint
+springdoc.api-docs.enabled=true
+# Disabling the swagger-ui
+springdoc.swagger-ui.enabled=true
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui/index.html
+
+springdoc.packagesToScan=com.paymentchain.billing.entities, com.paymentchain.billing.controller
+springdoc.pathsToMatch=/v1, /billing/**
+
