--- a/billing/src/main/resources/application.properties
+++ b/billing/src/main/resources/application.properties
@@ -16,3 +16,6 @@ springdoc.swagger-ui.path=/swagger-ui/index.html
 springdoc.packagesToScan=com.paymentchain.billing.entities, com.paymentchain.billing.controller
 springdoc.pathsToMatch=/v1, /billing/**
 
+spring.security.user.name=admin
+spring.security.user.password=2
+#spring.security.user.roles=ADMIN
