tests and properties

--- a/paymentchainparent/businessdomain/customer/src/main/resources/application.properties
+++ b/paymentchainparent/businessdomain/customer/src/main/resources/application.properties
@@ -1,6 +1,21 @@
-spring.config.import=optional:configserver:http://localhost:8888
-spring.cloud.config.name=config-client
-spring.cloud.config.profile=local
+#spring.config.import=optional:configserver:http://localhost:8888
+#spring.cloud.config.name=config-client
+#spring.cloud.config.profile=local
+
+#spring.application.name=businessdomain-customer
+
+#eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
+#eureka.client.register-with-eureka=true
+#eureka.client.healthcheck.enabled=true
+#eureka.client.fetch-registry=true
+
+#spring.cloud.config.enabled=true
+
+#management.endpoints.web.exposure.include=*
+
+
+server.port=8080
+spring.cloud.config.enabled=false
 
 spring.application.name=businessdomain-customer
 
@@ -9,7 +24,15 @@ eureka.client.register-with-eureka=true
 eureka.client.healthcheck.enabled=true
 eureka.client.fetch-registry=true
 
-spring.cloud.config.enabled=true
+
 
 management.endpoints.web.exposure.include=*
-#server.servlet.context-path=/business/V1
+
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://postgres_db:5432/customer
+spring.datasource.username=postgres
+spring.datasource.password=qwerty
